--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
 lightbox
 		fade in lightbox -- DONE
-	animate lightbox - changing images
+		animate lightbox - DONE
+		make lightbox NOT disappear when clicking on the image -- DONE
 		add arrows -- DONE
 		add x to hide -- DONE
 		escape to hide -- DONE
@@ -8,15 +9,15 @@ lightbox
 jump
 		animate jump -- DONE
 		menu titles to go red when we scroll to the thing -- DONE
-	somethign is wrong with the calculations! made the page smaller and it still thinks of the old number? maybe it is cached - not in firefox
-	and tshirt design can't light up :/
+		somethign is wrong with the calculations! made the page smaller and it still thinks of the old number? maybe it is cached - not in firefox -- DONE
 
 html/css
-	add actual captions
+		add actual captions -- DONE
+	fade captions with image
 	add CUNC?
 		fix thumbnails - max 3 -- DONE
 		fix thumbnail center image mess ? -- DONE
 		project title centered vertically -- DONE
 		images are not centered vertically in the lightbox -- DONE
-	font looks VERY skinny in chrome for some reason
+		font looks VERY skinny in chrome for some reason - not resolved but don't care
 
